# EV

./: .gitignore  README.md
conservation_law/: .clang-format  .gitignore  .gitignorebase  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  TODO  implicit_transport.cc  main.cc
conservation_law/include/: .gitignore
conservation_law/include/base/: Burgers.h  ConservationLaw.h  Euler.h  ShallowWater.h  Transport.h  TransportProblem.h
conservation_law/include/bc/: BoundaryConditions.h  DirichletBoundaryConditions.h  ShallowWater2DDamBreakBC.h  ShallowWaterBoundaryConditions.h
conservation_law/include/diffusion/: ArtificialDiffusion.h  LaplacianDiffusion.h  NoDiffusion.h
conservation_law/include/entropy/: Entropy.h  InterpolatedFluxEntropy.h  ScalarEntropy.h  ShallowWaterEntropy.h  TransportEntropy.h
conservation_law/include/executioners/: TransportExecutioner.h  TransportSSPRKExecutioner.h  TransportSteadyStateExecutioner.h  TransportThetaExecutioner.h  TransportTransientExecutioner.h
conservation_law/include/fct/: CharacteristicFCTFilter.h  DMPExplicitEulerFCTFilter.h  DMPSteadyStateFCTFilter.h  DMPThetaFCTFilter.h  DoFBounds.h  ExplicitEulerFCT.h  ExplicitEulerFCTFilter.h  FCT.h  FCTFilter.h  FunctionDoFBounds.h  Limiter.h  MultipassLimiter.h  OldFCT.h  OldImplicitFCT.h  OnesLimiter.h  SWCharacteristicFCTFilter.h  ShallowWaterExplicitEulerFCT.h  ShallowWaterFCT.h  SteadyStateFCT.h  SteadyStateFCTFilter.h  ThetaFCT.h  ThetaFCTFilter.h  TransportAnalyticFEFCTFilter.h  TransportAnalyticSSFCTFilter.h  TransportAnalyticSolutionBounds.h  TransportAnalyticThetaFCTFilter.h  TransportDMPAnalyticSSFCTFilter.h  TransportExactAnalyticSSFCTFilter.h  TransportExactDMPSSFCTFilter.h  TransportExplicitEulerFCT.h  TransportSteadyStateFCT.h  TransportThetaFCT.h  TransportUpwindAnalyticFEFCTFilter.h  TransportUpwindAnalyticSSFCTFilter.h  TransportUpwindAnalyticSolutionBounds.h  ZalesakLimiter.h  ZeroesLimiter.h
conservation_law/include/fe/: GroupFEValuesBase.h  GroupFEValuesCell.h  ScalarEntropyFluxFEValuesCell.h  (+2 more)
conservation_law/input/: burgers.prm  euler.prm  mms_sinx.prm  shallowwater.prm  transport.prm
conservation_law/mesh/: unit_square.msh
conservation_law/plotscripts/: convergence.gp  convergence_epslatex.gp  customplot.gp  make_plot  plot2d.gp  plot_matrix.gp  plot_study.py  plot_study_error.py  plot_utilities.py  solutions.gp  study_solution.gp  viscosity.gp  viscosity_overlap.gp
conservation_law/studies/: .gitignore
conservation_law/templates/: NewClass.cc  NewClass.h
conservation_law/tests/: .gitignore
euler/: .astyle_options  .clang-format  .gitignore  ArtificialDiffusion.h  BoundaryConditions.cc  BoundaryConditions.h  Burgers.cc  Burgers.h  BurgersParameters.cc  BurgersParameters.h  CMakeLists.txt  CMakeVars.h.in  ConservationLaw.cc  ConservationLaw.h  ConservationLawParameters.cc  ConservationLawParameters.h  ConstantViscosity.cc  ConstantViscosity.h  DMPLowOrderViscosity.cc  DMPLowOrderViscosity.h  DirichletBoundaryConditions.h  Doxyfile  Entropy.cc  Entropy.h  EntropyViscosity.cc  EntropyViscosity.h  Euler.cc  Euler.h  EulerParameters.cc  EulerParameters.h  EulerRiemannSolver.cc  EulerRiemannSolver.h  Exceptions.h  GroupFEValues.cc  GroupFEValues.h  GroupFEValuesBase.cc  GroupFEValuesBase.h  GroupFEValuesCell.cc  GroupFEValuesCell.h  GroupFEValuesFace.cc  (+67 more)
euler/input/: burgers.prm  burgers_1.in  euler.prm  euler_1.in  euler_3.in  shallowwater.prm  transport.prm
euler/matlab-1d/: euler_1d_v1.m
euler/output/: .gitignore
euler/plotscripts/: burgers.gp  compare_solution.gp  convergence.gp  customplot.gp  flip  ismissing.sh  solutions.gp  viscosity.gp  waterlevel.gp
euler/problems/: .gitignore
euler/src/: .gitignore
euler/templates/: NewClass.h
euler/tests/: .gitignore
transport/: .gitignore  .gitignorebase  CMakeLists.txt  ConservationLawFlux.h  DefectCorrectionSolver.h  Doxyfile  EntropyViscosity.cc  EntropyViscosity.h  ExactSolution1.cc  ExactSolution1.h  ExactSolution2.cc  ExactSolution2.h  ExactSolution4.cc  ExactSolution4.h  ExactSolutions.h  Executioner.cc  Executioner.h  FCT.cc  FCT.h  InitialValues.cc  InitialValues.h  LinearSolver.cc  LinearSolver.h  LinearTransportFlux.cc  LinearTransportFlux.h  LowOrderViscosity.cc  LowOrderViscosity.h  MultiRegionExactSolution.cc  NonlinearSolver.cc  NonlinearSolver.h  PostProcessor.cc  PostProcessor.h  README  RefinementHandler.cc  RefinementHandler.h  SSPRKTimeIntegrator.cc  SSPRKTimeIntegrator.h  SSPRungeKuttaTimeIntegrator.cc  SSPRungeKuttaTimeIntegrator.h  SkewVoidToAbsorberExactSolution.cc  (+22 more)
transport/doc/: README
transport/input/: test_problem_1.in  test_problem_3.in  test_problem_5.in
transport/matlab/: FCT_step_explicit.m  assemble_ss_rhs.m  build_matrices.m  check_DMP.m  check_max_principle.m  compare_schemes.m  compute_CMP_ss.m  compute_DMP.m  compute_DMP_ss.m  compute_Q.m  compute_Q_ss.m  compute_diffusion_matrix.m  compute_entropy_viscosity.m  compute_entropy_viscosity_ss.m  compute_flux_correction_matrix.m  compute_high_order_diffusion_matrix.m  compute_high_order_solution_ss.m  compute_limited_flux_sums_ss.m  compute_limiting_coefficients.m  compute_low_order_solution_theta.m  compute_max_principle_bounds.m  compute_min_max_per_dof.m  compute_upwind_CMP.m  exact_solution.m  exact_solution_ss.m  fct.m  fct_main.m  flux_correction_matrix.m  flux_correction_matrix_ss.m  get_GL_quadrature.m  get_lagrange_basis.m  high_order_step.m  limiter_josh_upwind.m  low_order_step.m  main.m  main_explicit.m  main_ss.m  main_theta.m  newest-files.txt  prelimit_fluxes.m  (+1 more)
transport/plotscripts/: compare_solutions.gp  convergence.gp  convergence_ss.gp  crop_pdfs  doubleplot.gp  doubleplot_1.gp  doubleplot_2.gp  ismissing.sh  solutions.gp  test_problem_1.gp  test_problem_2.gp  viscosity.gp
transport/ss/: .gitignore  CMakeLists.txt  README  TransportParameters.cc  TransportParameters.h  TransportProblemParallel.cc  TransportProblemParallel.h  TransportProblemSerial.cc  TransportProblemSerial.h  input  runmult.py  transport_parallel.cc  transport_serial.cc
transport/tests/: .gitignore
(+1079 files in other folders)
